<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.codelab.movies.activity.MainActivity">

    <TextView
        android:id="@+id/popular_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/popular"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_popular"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/popular_title"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp" />

    <TextView
        android:id="@+id/tv_show_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_view_popular"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_shows"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_series"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/tv_show_title"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp" />

    <TextView
        android:id="@+id/trending_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_view_series"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_shows"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_trending"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pb_load_more"
        android:layout_below="@id/trending_title"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp" />

    <RelativeLayout
        android:id="@+id/rlLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_data"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/pb_load_more"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>
